--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <!-- Open Graph Tags for better sharing on social media -->
             <meta property="og:title" content="Nikhitha - Web Developer">
             <meta property="og:description" content="Explore my portfolio showcasing my web development projects, UI/UX design, and more. Get in touch with me for collaborations!">
-            <meta property="og:image" content="https://my-portfolio-seven-peach-71.vercel.app/images/image.png">
+            <meta property="og:image" content="https://my-portfolio-seven-peach-71.vercel.app/images/image.jpg">
             <meta property="og:image:width" content="1200">
             <meta property="og:image:height" content="630">
              <meta property="og:url" content="https://nikhitha-dev308.github.io/my_portfolio/">
           
             <!-- Twitter Card Tags for better sharing on Twitter -->
-            <meta name="twitter:card" content="https://my-portfolio-seven-peach-71.vercel.app/images/image.png">
+            <meta name="twitter:card" content="https://my-portfolio-seven-peach-71.vercel.app/images/image.jpg">
             <meta name="twitter:title" content="Nikhitha - Web Developer">
             <meta name="twitter:description" content="Browse my portfolio showcasing my skills in web development and design. Contact me for collaboration opportunities.">
-            <meta name="twitter:image" content="https://nikhitha-dev308.github.io/my_portfolio/images/image.png"> <!-- Image for Twitter preview -->
+            <meta name="twitter:image" content="https://nikhitha-dev308.github.io/my_portfolio/images/image.jpg"> <!-- Image for Twitter preview -->
             <meta name="twitter:site" content="https://nikhitha-dev308.github.io/my_portfolio/">
           
             <!-- Robots Meta Tag (Control search engine crawling) -->
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div>
-                    <img class="image" src="./images/image.png" width="250px" height="250px"/>
+                    <img class="image" src="./images/image.jpg" width="250px" height="250px"/>
                 </div>
             </div>
 
